Fix text errors

--- a/views/partials/hero.hbs
+++ b/views/partials/hero.hbs
@@ -2,7 +2,7 @@
   <div class="mask">
     <div class="jumbotron">
       <h1>Fast and Simple</h1>
-      <p class="tips">No need to go out</p>
+      <p class="tips">Ain't no need to go outside</p>
       <p><a class="btn btn-primary btn-lg" href="javascript:" role="button">Order Now</a></p>
     </div>
   </div>
