--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <a href="/login">
-            <button type="button" class="btn btn-default navbar-btn btn-info">Login
+            <button type="button" class="btn btn-default navbar-btn btn-info">Log
               in
             </button>
           </a>
