--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -23,7 +23,7 @@
               </div>
             </div>
             <div class="form-group">
-              <input type="email" name="email" placeholder="Email Address" value="{{email}}">
+              <input type="text" name="email" placeholder="Email Address" value="{{email}}">
               <div class="tips">
                 {{#showEmail}}
                 <span>Please enter a valid email address</span>
