--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
         <div class="form">
           <form action="/login" method="POST">
             <div class="form-group">
-              <input type="email" placeholder="Email Address" value="{{email}}" name="email">
+              <input type="text" placeholder="Email Address" value="{{email}}" name="email">
               <div class="tips">
                 {{#showEmailTips}}
                 <span>Please enter a valid email address</span>
