Fix errors. The final version

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -75,8 +75,7 @@
       </div>
       <div class="row">
         <p class="bottom-desc">
-          Copyright © winter
-          2021,&lt;FirstName&gt;&lt;LastName&gt;WEB322N&lt;SectionCode&gt;
+          Copyright © winter 2021, Tim Lin, WEB322NDD
         </p>
       </div>
     </footer>
