--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -9,12 +9,31 @@ main {
 .login-wrapper .h4 {
   color: #70cacb;
 }
+.login-wrapper .error {
+  width: 100%;
+  height: 30px;
+  color: #f10215;
+}
 .form {
   width: 100%;
-  padding: 20px;
+  padding: 0 20px;
 }
 .form .form-group {
   width: 100%;
+}
+.form .form-group .role {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 20px;
+}
+.form .form-group .role span {
+  color: #70cacb;
+}
+.form .form-group .role input {
+  margin: 0 10px;
+  width: 20px;
+  height: 20px;
 }
 .form .form-group input {
   width: 100%;
