Fix email without prompt bug

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -28,6 +28,9 @@
                 {{#showEmail}}
                 <span>Please enter a valid email address</span>
                 {{/showEmail}}
+                {{#isEmailExist}}
+                <span>The email has been registered, please change other one</span>
+                {{/isEmailExist}}
               </div>
             </div>
             <div class="form-group">
