--- a/views/partials/hero.hbs
+++ b/views/partials/hero.hbs
@@ -3,7 +3,7 @@
     <div class="jumbotron">
       <h1>Fast and Simple</h1>
       <p class="tips">Ain't no need to go outside</p>
-      <p><a class="btn btn-primary btn-lg" href="javascript:" role="button">Order Now</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/menu" role="button">Order Now</a></p>
     </div>
   </div>
 </div>
