--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,9 +1,11 @@
+{{#css '/stylesheets/welcome.css'}}{{/css}}
 <div class="welcome-wrapper">
   <div class="welcome">
     <h1>Welcome</h1>
     <p>{{info}}</p>
-    <p>Here you can order the food you want, whether it's   breakfast, lunch or dinner.</p>
-    <p>You can also subscribe to our website to get the     latest food recommendations.</p>
+    <p>Here you can order the food you want, whether it's breakfast, lunch or dinner.</p>
+    <p>You can also subscribe to our website to get the latest food recommendations.</p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">Home</a></p>
   </div>
 </div>
+{{>footer}}
