--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -14,6 +14,8 @@ html {
   height: 100%;
 }
 body {
+  display: flex;
+  flex-direction: column;
   position: relative;
   padding-top: 50px;
   min-height: 100%;
@@ -21,6 +23,11 @@ body {
 ul {
   list-style-type: none;
 }
+
+main {
+  flex: 1;
+}
+
 .navbar {
   padding: 0 15px;
   background-color: #fff;
@@ -39,19 +46,58 @@ ul {
   background-color: #fff;
 }
 
+.navbar-right li {
+  position: relative;
+  height: 50px;
+}
+.userInfo:hover .user-operation {
+  display: block;
+}
+
+.cart .glyphicon-shopping-cart {
+  padding-right: 5px;
+}
+.userInfo a {
+  text-decoration: none;
+  color: #000 !important;
+}
+.userInfo .user-operation {
+  display: none;
+  position: absolute;
+  top: 45px;
+  right: -10px;
+  width: 120px;
+  padding: 5px 0;
+  overflow: hidden;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px #ccc;
+}
+.userInfo .user-operation p {
+  margin: 0;
+}
+.userInfo .user-operation a:hover {
+  background-color: #70cacb;
+  color: #fff !important;
+}
+.userInfo .user-operation p a {
+  display: block !important;
+  padding: 5px !important;
+  color: #70cacb !important;
+}
 .theme {
   color: #70cacb !important;
+}
+.navbar-right li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .navbar-right a {
   display: flex !important;
   justify-content: center;
   align-items: center;
   padding: 0 5px !important;
-}
-
-.navbar-right .userName {
-  height: 50px;
-  line-height: 50px;
 }
 
 .navbar-right a .btn {
