--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -15,37 +15,30 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle theme" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">On the menu <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/menu?category=Breakfast#menu" data-cate="breakfast">Breakfast</a></li>
-            <li><a href="/menu?category=Lunch#menu" data-cate="lunch">Lunch</a></li>
-            <li><a href="/menu?category=Dinner#menu" data-cate="dinner">Dinner</a></li>
-            <li role="separator" class="divider"></li>
-          </ul>
+        <li>
+          <a href="/menu" class="theme">On the menu</a>
         </li>
         <li>
           <a href="/#process" class="theme">How it works</a>
         </li>
         <li>
-          <a href="javascript:" class="theme">Gift Cards</a>
+          <a href="/customer/shopping_cart" class="theme">Shopping cart</a>
+        </li>
+        <li>
+          <a href="/clerk/viewMeals" class="theme">View meals</a>
         </li>
       </ul>
+
       {{#if user}}
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div class="userName">
-            {{!-- <button type="button" class="btn btn-default navbar-btn btn-info">Log
-              in
-            </button> --}}
+        <li class="userInfo">
+          <a href="javascript:">
             {{user.firstName}} {{user.lastName}}
-          </div>
+          </a>
         </li>
         <li>
           <a href="/logout">
-            <button type="button" class="btn btn-default navbar-btn btn-danger">log out
-            </button>
+            <button type="button" class="btn btn-default navbar-btn btn-danger logout">Log out</button>
           </a>
         </li>
       </ul>
@@ -53,16 +46,12 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <a href="/login">
-            <button type="button" class="btn btn-default navbar-btn btn-info">Log
-              in
-            </button>
+            <button type="button" class="btn btn-default navbar-btn btn-info">Log in</button>
           </a>
         </li>
         <li>
           <a href="/signup">
-            <button type="button" class="btn btn-default navbar-btn btn-danger">Sign
-              up
-            </button>
+            <button type="button" class="btn btn-default navbar-btn btn-danger">Sign up</button>
           </a>
         </li>
       </ul>
