--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -26,7 +26,7 @@
         </p>
         <p class="food-desc"> {{detailInfo.Description}}</p>
       </div>
-      <a href='javascript:'>
+      <a href='/detail/addToCart/{{detailInfo._id}}'>
         <button class="addBtn">Add to order</button>
       </a>
     </div>
